small update to fix IntraRoute submit button on mobile

--- a/intraroute.css
+++ b/intraroute.css
@@ -49,7 +49,9 @@ body {
 
 @media (max-width: 930px) {
     .gray-box-before {
-        width: 100%;
+        width: 90%;
+        padding-left: 5%;
+        padding-right: 5%;
     }
 
     .top-logo-intraroute {
@@ -152,12 +154,23 @@ select {
     color: white;
     border: 3px solid white;
     border-radius: 50px;
-    width: 30%;
     height: 50px;
     font-size: 1.5rem;
     font-weight: 600;
     margin-top: 35px;
     margin-bottom: 45px;
+}
+
+@media (min-width: 930px) {
+    #submit-button {
+        width: 30%;
+    }
+}
+
+@media (max-width: 930px) {
+    #submit-button {
+        width: 250px;
+    }
 }
 
 #submit-button:hover {
